templates/traveling-page/traveling-page.css
/* .traveling-page .section:nth-of-type(2n+1) {
  background: var(--background-color-light);
}

h1 {
  color: rgb(59, 9, 44);
  display: block;
  font-family: Raleway, sans-serif;
  font-size: 24px;
  font-weight: 800;
  text-align: center;
}

h1+p {
  color: rgb(40, 6, 30);
  font-family: Libre Franklin, sans-serif;
  font-size: 16px;
  font-weight: 400px;
  text-align: center;

  line-height: 24px;
  margin-block-end: 12px;
  margin-block-start: 0px;
  margin-bottom: 12px;
  -webkit-font-smoothing: antialiased;

} */

.traveling-page .hero {
  box-sizing: border-box;
  height: 62.5vw;
  min-height: 0;
  max-height: 326px;
  padding: 0;
  isolation: isolate;
  display: flex;
  flex-direction: column;
  justify-content: end;
}

.traveling-page .hero picture {
  margin: 0;
}

.traveling-page .hero img {
  position: absolute;
  inset: 0;
  z-index: -1;
  object-fit: cover;
}

.traveling-page .hero>div {
  max-width: none;
  background: rgba(87, 81, 141, .6);
}

.traveling-page .hero>div>div {
  max-width: 1392px;
  margin: 0 auto;
}

.traveling-page .hero h1 {
  margin: 0;
  padding: 2rem 1.5rem;
  color: var(--text-color-inverted);
  text-shadow: 2px 3px 5px rgb(0 0 0 / 50%);
  text-align: left;
  font-size: calc(1.4875rem + 2.85vw);
}

/* .traveling-page .hero h1 {
  box-sizing: border-box;
  display: block;

  font-family: Raleway, sans-serif;
  font-size: 58px;
  font-weight: 800;
  line-height: 63.8px;
  color: rgb(255, 255, 255);

  text-rendering: optimizelegibility;
  text-shadow: rgba(0, 0, 0, 0.5) 2px 3px 5px;
  text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;

  padding: 0 24px;
  margin: 0;
} */
.section.float-column-container {
  background-color: rgb(247, 247, 247);
}

.columns-container {
  box-sizing: border-box;
  display: block;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  color: var(--color-gray-dark);
  text-size-adjust: 100%;
  padding: 70px 16px 50px;
}

.traveling-page .blade .blade-image img {
  border-radius: 0px;
}

.traveling-page .blade-body h3 {
  /* font-family: "Raleway", sans-serif; */
  font-size: 24px;
  font-weight: 800;
  color: var(--color-purple-gray);
}

.traveling-page .blade-body p {
  text-align: left;
}

.traveling-page h2 {
  box-sizing: border-box;
  display: block;
  font-size: 1.5rem;
  font-weight: 800;
  line-height: 26.4px;
  color: var(--color-purple-gray);
  text-align: center;
  margin: 1.5rem 0;
  padding: 0;
}

.section.city {
  display: flex;
  flex-direction: column;
  position: relative;
  padding-top: 40px;
  background-color: #fff;
}

.section.city::before {
  content: "";
  position: absolute;
  left: 5%;
  /* To center the line, use half of the remaining width (100% - 90% = 10%, divided by 2 = 5%). */
  width: 90%;
  border-top: 1px solid #ff7d5a;
}

.section.city h3 {
  font-size: calc(1.325rem + .9vw);
  line-height: 1.1;
  color: #3b092c;
  margin-bottom: 30px;
  font-weight: 800;
  background-color: #fff;
}

.section.city .float-column-image-left,
.section.city .float-column-image-right {
  flex-wrap: nowrap;
  margin-bottom: 20px;
}

.section.city .text {
  clear: both;
}

.city .icon-type-list {
  justify-content: left;
  padding: 0px;
  margin-bottom: 30px;
}

.city .icon-type-list div {
  display: flex;
  flex-direction: row;
  align-items: left;
  justify-content: left;
  margin-right: 25px;
  width: 160px;
  height: 35px;
}

.city .icon-type-list li {
  padding: 0px;
}

.city .icon-type-list div img {
  width: 35px;
  height: 40px;
  padding-right: 4px;
}

.city .icon-type-list div span {
  margin-top: 0px;
  font-size: 14px;
  text-align: left;
  white-space: nowrap;
  margin-right: 20px
}

.city a {
  text-decoration: underline;
  color: rgb(0, 155, 216);
  cursor: pointer;
}

.city a:hover {
  text-decoration: none;
}

.city a[target="_blank"]::after {
  content: "";
  margin-left: 0.2em;
}

@media (min-width:1024px) {
  .section.city {
    margin: 0 auto;
    max-width: 1344px;
    display: grid;
    column-gap: 50px;
    row-gap:30px;
    grid-template-areas:
      "img1 img1 img1 img1 intro intro intro intro intro intro"
      "fcol1 fcol1 fcol1 fcol1 fcol1 fcol1 fcol1 fcol1 fcol1 fcol1"
      "fcol2 fcol2 fcol2 fcol2 fcol2 fcol2 fcol2 fcol2 fcol2 fcol2"
    ;
  }

  .section.city p {
    padding-bottom:12px;
   }

  .section.city>.city-intro {
    grid-area: intro;
  }

  .section.city .columns.city-header {
    grid-area: img1;
  }

  .section.city .columns.city-middle {
    grid-area: fcol1;
  }

  .section.city .columns.city-footer {
    grid-area: fcol2;
  }

  .section.city .columns.city-middle>div {
    display: grid;
    grid-template-columns: 7fr 3fr;
  }

  .section.city .columns.city-footer>div {
    display: grid;
    grid-template-columns: 3fr 7fr;
    position: relative;
  }

  .section.city .tips-wrapper {
    position: absolute;
    bottom: 0;
  }

  .columns.footer.block {
    position: relative;
  }
}

@media screen and(min-width:769px) {
  .traveling-page h2 {
    font-size: 1.5rem;
    margin: 1.75rem 0;
  }
}

@media screen and (min-width: 1024px) {
  .traveling-page h2 {
    margin: 2rem 0;
  }
}

